--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.0.0-rc.0",
+    "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
     "bootstrap": "^4.3.1",
     "prop-types": "^15.7.2",
@@ -31,10 +31,10 @@
     "eslint": "^4.19.1",
     "eslint-loader": "^2.2.0",
     "eslint-plugin-react": "^7.14.2",
-    "file-loader": "^4.0.0",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "react-hot-loader": "^3.1.3",
-    "url-loader": "^2.0.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.5"
   }
